--- a/src/app/parts/dialog/template.pug
+++ b/src/app/parts/dialog/template.pug
@@ -13,10 +13,11 @@
             ul
                 li(*ngFor="let item of data.preferred_skills") {{item}}
 
-        .coffee
-            a(target="_blank" href="https://ecestudents2018.typeform.com/to/e2Rfzh") Have a coffee!
-        .apply
-            a(target="_blank" href="https://ecestudents2018.typeform.com/to/ruK1fY") Apply for {{data.name}}
+        .cta
+            .coffee
+                a(target="_blank" href="https://ecestudents2018.typeform.com/to/e2Rfzh") Have a coffee!
+            .apply
+                a(target="_blank" href="https://ecestudents2018.typeform.com/to/ruK1fY") Apply for {{data.name}}
 
         .two
             span(*ngIf="data.two") We have two open spots for this position!
