--- a/src/app/pages/board_recruitment/template.pug
+++ b/src/app/pages/board_recruitment/template.pug
@@ -1,6 +1,9 @@
 app-main-menu
 
-h1.tagline Are you on <span>board?</span>
+.tagline
+    h1 Are you on <span>board?</span>
+    h2 Deadline April 3
+
 
 .wrapper
 
