--- a/src/app/pages/events/24hbg/template.pug
+++ b/src/app/pages/events/24hbg/template.pug
@@ -141,9 +141,9 @@ app-main-menu
         img.logo(src='{{ "pages/24hbg/logo" | cd:"w_600,c_fill"}}')
         p
             | The 2018 edition of the
-            span.bold 24 hour business game
+            | <span class="bold"> 24 hour business game </span>
             | will take place in the Rotterdam Science Tower, heart of the Rotterdam's entrepreneurial spirit , on
-            span.bold May 11th and 12th.
+            | <span class="bold"> May 11th and 12th.</span>
 
         // h2 SPEAKERS
         // .speakers-grid
@@ -227,5 +227,5 @@ app-main-menu
 
         .social
             |Check our
-            a.light(href="https://www.facebook.com/ECEStudents") Facebook page
+            | <a class="light" href="https://www.facebook.com/ECEStudents"> Facebook page </a>
             | to know more about the previous editions of the event!
