--- a/src/app/pages/events/24hbg/style.scss
+++ b/src/app/pages/events/24hbg/style.scss
@@ -43,13 +43,16 @@ app-main-menu {
         @include bp(medium) {
             width: 60%;
         }
+
+
     }
     h1 {
         margin: 0;
         padding-top: ms(1);
-        font-weight: 300;
+        font-weight: 700;
         font-size: ms(1.6);
-        color: white;
+        color: $color;
+        text-transform: uppercase;
         @include bp(medium) {
             font-size: ms(2);
         }
