--- a/src/app/pages/events/24hbg/template.pug
+++ b/src/app/pages/events/24hbg/template.pug
@@ -3,7 +3,7 @@ app-main-menu
     .wrapper
         .left
             h1 Business never sleeps.
-            h3 THE 24 HOUR BUSINESS GAME START IN:
+            h3 THE 24 HOUR BUSINESS GAME STARTs IN:
             countdown( [config]="{stopTime: 1526040000000}")
                 | $!d!
                 span.stamp days
@@ -16,7 +16,7 @@ app-main-menu
             // .buttonHolder
             //     button(type='submit')
             //         a(href="#") Sign up
-            .under Build your idea | Showcase your project
+            .under Build your idea in 24 hours <br> Showcase your project!
 
 .about
     .wrapper
