--- a/src/app/pages/events/24hbg/template.pug
+++ b/src/app/pages/events/24hbg/template.pug
@@ -3,7 +3,7 @@ app-main-menu
     .wrapper
         .left
             h1 Business never sleeps.
-            h3 THE 24 HOUR BUSINESS GAME STARTs IN:
+            h3 THE 24 HOUR BUSINESS GAME STARTS IN:
             countdown( [config]="{stopTime: 1526040000000}")
                 | $!d!
                 span.stamp days
@@ -16,7 +16,9 @@ app-main-menu
             // .buttonHolder
             //     button(type='submit')
             //         a(href="#") Sign up
-            .under Build your idea in 24 hours <br> Showcase your project!
+            .under Build your idea in 24 hours <br> Showcase your project! <br>
+                button
+                    a(href="https://ecestudents2018.typeform.com/to/fMzbJf", target="_blank") Sign Up
 
 .about
     .wrapper
