--- a/src/app/pages/events/24hbg/template.pug
+++ b/src/app/pages/events/24hbg/template.pug
@@ -120,23 +120,11 @@ app-main-menu
         //         a(href="#") Sign up
 
 .sponsors
-    h2 PREVIOUS SPONSORS
-    .row1
-        img(src='{{ "pages/24hbg/Asset_20" | cd:"w_500,c_fill"}}' width='250')
-        img(src='{{ "pages/24hbg/tonys" | cd:"w_300,c_fill"}}' width='150')
-        img(src='{{ "pages/24hbg/Asset_16" | cd:"w_120,c_fill"}}')
-        img(src='{{ "pages/24hbg/Asset_14" | cd:"w_200,c_fill"}}' width='200')
-    .row2
-        img(src='{{ "pages/24hbg/Asset_6" | cd:"w_250,c_fill"}}' width='250')
-        img(src='{{ "pages/24hbg/Asset_9" | cd:"w_150,c_fill"}}')
-        img(src='{{ "pages/24hbg/eneco" | cd:"w_300,c_fill"}}' width='150')
-        img(src='{{ "pages/24hbg/Asset_5" | cd:"w_150,c_fill"}}')
-        img(src='{{ "pages/24hbg/Asset_15" | cd:"c_crop,g_north,h_223,w_307/w_200,c_fill"}}')
-    .row3
-        img(src='{{ "pages/24hbg/Asset_18" | cd:"w_250,c_fill"}}')
-        img(src='{{ "pages/24hbg/Asset_12" | cd:"w_150,c_fill"}}')
-        img(src='{{ "pages/24hbg/queal" | cd:"w_150,c_fill"}}')
-        img(src='{{ "pages/24hbg/Asset_11" | cd:"w_200,c_fill"}}')
+    h2 THIS YEAR'S SPONSORS
+    .content
+        img(src='{{ "pages/24hbg/mk" | cd:"w_500,c_fill"}}' width='250')
+        img(src='{{ "pages/24hbg/aws" | cd:"w_500,c_fill"}}' width='250')
+        img(src='{{ "pages/24hbg/venturesone" | cd:"w_500,c_fill"}}' width='250')
 
 .speakers
     .wrapper
