--- a/src/app/pages/events/24hbg/style.scss
+++ b/src/app/pages/events/24hbg/style.scss
@@ -45,7 +45,7 @@ app-main-menu {
     video {
         right: 0;
         bottom: 0;
-        min-width: 100%;
+        width: 100%;
         min-height: 100%;
     }
     .left {
