made menu maintance easier

--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -29,6 +29,7 @@ $ece-black: #303030;
 $ic-blue: #4961fa;
 
 $nav-height: ms(2.5);
+$nav-margin: 126px;
 $nav-icon-margin: ms(-1);
 $nav-icon-height: $nav-height - 2 * $nav-icon-margin;
 
