--- a/src/app/pages/events/24hbg/template.pug
+++ b/src/app/pages/events/24hbg/template.pug
@@ -1,9 +1,6 @@
-app-main-menu
+.menublock
+
 .container
-    video(class="my-videos", autoplay muted )
-        source(src="https://res.cloudinary.com/ece/video/upload/c_crop,e_accelerate:-20,h_541,w_1280/v1522672963/pages/24hbg/IMG_1643.TRIM.webm", type="video/webm")
-        source(src="https://res.cloudinary.com/ece/video/upload/c_crop,e_accelerate:-20,h_541,w_1280/v1522672963/pages/24hbg/IMG_1643.TRIM.mp4", type="video/mp4")
-        source(src="https://res.cloudinary.com/ece/video/upload/c_crop,e_accelerate:-20,h_541,w_1280/v1522672963/pages/24hbg/IMG_1643.TRIM.ogv", type="video/ogg")
     .wrapper
         .left
             h1 Business never sleeps.
