--- a/src/app/pages/events/24hbg/template.pug
+++ b/src/app/pages/events/24hbg/template.pug
@@ -127,9 +127,9 @@
 .sponsors
     h2 THIS YEAR'S SPONSORS
     .content
-        img(src='{{ "pages/24hbg/mk" | cd:"w_500,c_fill"}}' width='250')
-        img(src='{{ "pages/24hbg/aws" | cd:"w_500,c_fill"}}' width='250')
-        img(src='{{ "pages/24hbg/venturesone" | cd:"w_500,c_fill"}}' width='250')
+        img(src='{{ "pages/24hbg/mk" | cd:"w_500,c_fill"}}')
+        img(src='{{ "pages/24hbg/aws" | cd:"w_500,c_fill"}}')
+        img(src='{{ "pages/24hbg/venturesone" | cd:"w_500,c_fill"}}')
 
 .speakers
     .wrapper
