--- a/src/app/pages/events/24hbg/style.scss
+++ b/src/app/pages/events/24hbg/style.scss
@@ -384,18 +384,24 @@ app-main-menu {
 .sponsors {
     @include wrapper;
     h2 {
-        font-size: ms(1);
+        font-size: ms(1.5);
         margin-top: ms(2);
-        color: $ece-blue;
-        font-style: italic;
+        color: black;
+        text-align: center;
+        // font-style: italic;
     }
     .content {
         width: 100%;
         margin: auto;
         display: grid;
-        grid-template-columns: repeat(3, auto);
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: ms(1);
         justify-items: center;
         align-items: center;
+        img {
+            //width:100%;
+            margin:0;
+        }
     }
 }
 
