--- a/src/app/pages/events-overview/template.pug
+++ b/src/app/pages/events-overview/template.pug
@@ -1,9 +1,9 @@
 .header
 main
-    h2 Events Calendar
+    h2 Events Overview
     .overview
         .event(*ngFor="let event of events")
-            img.top(src='{{event.topimage | cd:"w_320,h_120,c_fill"}}')
+            img.top(src='{{event.topimage | cd:"w_640,h_240,c_fill"}}')
             h3 {{event.title}}
             .text {{event.text}}
             .bottom(*ngIf="event.link")
