--- a/src/app/pages/events/24hbg/template.pug
+++ b/src/app/pages/events/24hbg/template.pug
@@ -20,6 +20,7 @@
             .under Build your idea in 24 hours <br> Showcase your project! <br>
                 button
                     a(href="https://ecestudents2018.typeform.com/to/fMzbJf", target="_blank") Sign Up
+            .deadline Deadline on May 6th 23:59h
 
 .about
     .wrapper
