--- a/src/app/pages/events/24hbg/style.scss
+++ b/src/app/pages/events/24hbg/style.scss
@@ -398,10 +398,13 @@ app-main-menu {
         width: 100%;
         margin: auto;
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         grid-gap: ms(1);
         justify-items: center;
         align-items: center;
+        @include bp(large) {
+            grid-template-columns: repeat(4, 1fr);
+        }
         img {
             //width:100%;
             margin: 0;
