added coca and red bull

--- a/src/app/pages/events/24hbg/template.pug
+++ b/src/app/pages/events/24hbg/template.pug
@@ -136,16 +136,18 @@
 .sponsors
     h2 THIS YEAR'S PARTNERS
     .content
-        img(src='{{ "pages/24hbg/google" | cd:"w_500,c_fill"}}')
-        img(src='{{ "pages/24hbg/aws" | cd:"w_500,c_fill"}}')
-        img(src='{{ "pages/24hbg/erasmus_sport" | cd:"w_500,c_fill"}}')
-        img(src='{{ "pages/24hbg/turing_society" | cd:"w_500,c_fill"}}')
-        img(src='{{ "pages/24hbg/unilever" | cd:"w_500,c_fill"}}')
-        img(src='{{ "pages/24hbg/menublend" | cd:"w_500,c_fill"}}')
-        img(src='{{ "pages/24hbg/k2s_logo" | cd:"w_500,c_fill"}}')
-        img(src='{{ "pages/24hbg/restart_logo_1" | cd:"w_500,c_fill"}}')
-        img(src='{{ "pages/24hbg/ifsa_network" | cd:"w_500,c_fill"}}')
-        img(src='{{ "pages/24hbg/glassdollar" | cd:"w_500,c_fill"}}')
+        img(src='{{ "pages/24hbg/google" | cd:"w_400,c_fill"}}')
+        img(src='{{ "pages/24hbg/aws" | cd:"w_400,c_fill"}}')
+        img(src='{{ "pages/24hbg/erasmus_sport" | cd:"w_400,c_fill"}}')
+        img(src='{{ "pages/24hbg/turing_society" | cd:"w_400,c_fill"}}')
+        img(src='{{ "pages/24hbg/unilever" | cd:"w_400,c_fill"}}')
+        img(src='{{ "pages/24hbg/menublend" | cd:"w_400,c_fill"}}')
+        img(src='{{ "pages/24hbg/k2s_logo" | cd:"w_400,c_fill"}}')
+        img(src='{{ "pages/24hbg/restart_logo_1" | cd:"w_400,c_fill"}}')
+        img(src='{{ "pages/24hbg/ifsa_network" | cd:"w_400,c_fill"}}')
+        img(src='{{ "pages/24hbg/glassdollar" | cd:"w_400,c_fill"}}')
+        img(src='{{ "pages/24hbg/redbull" | cd:"w_400,c_fill"}}')
+        img(src='{{ "pages/24hbg/cocacola" | cd:"w_400,c_fill"}}')
 
 .speakers
     .wrapper
