--- a/src/app/pages/events/24hbg/template.pug
+++ b/src/app/pages/events/24hbg/template.pug
@@ -154,8 +154,8 @@
         img.logo(src='{{ "pages/24hbg/logo" | cd:"w_600,c_fill"}}')
         p
             | The 2018 edition of the
-            | <span class="bold"> 24 hour business game </span>
-            | will take place in the Rotterdam Science Tower, heart of the Rotterdam's entrepreneurial spirit , on
+            | <span class="bold"> 24 Hour Business Game </span>
+            | will take place in the Rotterdam Science Tower,heart of the Rotterdam's entrepreneurial spirit, on
             | <span class="bold"> May 11th and 12th.</span>
 
         // h2 SPEAKERS
