--- a/src/app/parts/footer/template.pug
+++ b/src/app/parts/footer/template.pug
@@ -1,34 +1,40 @@
-footer 
+footer
     .wrapper
-        h2.con Contact Us 
-        .contact 
-            
+        h2.con Contact Us
+        .contact
+
             .phone.fa
             div 010 - 409 13 04
             .mail.fa
             div info@ecestudents.com
+            .privacy.fa
+            div
+                a(href="https://ece.nl/privacy-statement/", target="_blank") Privacy Statement
+            .terms.fa
+            div
+                a(href="https://ece.nl/terms-conditions/", target="_blank") Terms & Conditions
         h2.add Visiting Address
         .adress
-             
+
             .location.fa
             div Burgemeester Oudlaan 50
                 br
                 | Office H7-27
-                br 
+                br
                 | 3062 PA | Rotterdam
-        h2.soc Stay Updated   
+        h2.soc Stay Updated
         .social
-            
+
             ul
                 li
                     a(class="fb", target="_blank", href='https://www.facebook.com/ECEStudents')
                     .count 3556
                 li
                     a(class="ln", target="_blank", href='https://www.linkedin.com/company/4997540/')
-                    .count 348 
+                    .count 348
                 li
                     a(class="twit", target="_blank", href='https://twitter.com/ECEStudents')
-                    .count 456 
+                    .count 456
                 li
                     a(class="insta", target="_blank", href='https://www.instagram.com/ecestudents/')
                     .count 502
