--- a/src/app/pages/events-overview/template.pug
+++ b/src/app/pages/events-overview/template.pug
@@ -1,6 +1,6 @@
 .header
 main
-    h2 Events Overview
+    h2 Committees Overview
     .overview
         .event(*ngFor="let event of events")
             img.top(src='{{event.topimage | cd:"w_640,h_240,c_fill"}}')
