--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -36,8 +36,8 @@
         a(routerLink='/ic') Apply now
 
 #commingsoon.container-fluid
-    h1 More content is coming soon
-    h2 Keep visiting our site to find out about our amazing projects
+    h1 Stay up-to-date!
+    a.button(href='https://ecestudents2017.typeform.com/to/WTbHpY', target="_blank") Sign Up
 
 
 #partners.container-fluid
