--- a/src/app/pages/events-overview/style.scss
+++ b/src/app/pages/events-overview/style.scss
@@ -37,7 +37,7 @@ main {
             box-shadow: 0 0 5px #515151;
             transition: box-shadow 0.3s;
             border-radius: 15px;
-            padding-bottom: ms(1);
+            //padding-bottom: ms(1);
 
             &:hover {
                 box-shadow: 0 0 20px #515151;
