--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -5,10 +5,9 @@
         h2 Erasmus Centre for
         h2 Entrepreneurship <span class="blue">Students</span>
         h2 is
-        h1 Shaping Ideas
+        h1 <span class="blue">RECRUITING!</span>
 
 #construction
-    | Website under construction. Innovation under way.
 
 #erasmus.container-fluid
     .left
@@ -44,7 +43,7 @@
     ul
         li(*ngFor="let item of partners")
             img(src='{{ "pages/front/"+item+".svg" | cd:"w_300,c_fill"}}')
-            
+
 #love.container-fluid
 #follow.container-fluid
     .social
