--- a/src/app/pages/homepage/style.scss
+++ b/src/app/pages/homepage/style.scss
@@ -15,6 +15,7 @@
 
 #construction {
       width: 100%;
+      height: ms(-2);
       text-align: center;
       font-family: MuseoSans;
       font-size: ms(0);
