--- a/src/app/pages/committee-page/template.pug
+++ b/src/app/pages/committee-page/template.pug
@@ -12,4 +12,4 @@ main
                     img(src='{{"pages/committeepage/Hexagon_lichtblauwe-01-01-01"| cd:"w_15,c_fill"}}')
 
                     | {{position}}
-        a.apply(href="", target="_blank") APPLY
+        a.apply(href="https://ecestudents2018.typeform.com/to/qWrBTC", target="_blank") APPLY
